# ltv-unicycle-controller

./: CMakeLists.txt  README.md  format.sh
eigen3/Eigen/: Core  Eigenvalues  LU  QR
eigen3/Eigen/src/Core/arch/Default/: GenericPacketMathFunctions.h
eigen3/Eigen/src/Core/functors/: BinaryFunctors.h
eigen3/unsupported/Eigen/: MatrixFunctions
src/: Main.cpp  ltv_diff_drive_controller_main.cpp  ltv_unicycle_controller_main.cpp
src/frc/: AngleModulus.h  DARE.h  DCMotor.h  Geometry2d.h  IdentityDrivetrainSystem.h  LQR.h  LTVDifferentialDriveController.cpp  LTVDifferentialDriveController.h  LTVUnicycleController.cpp  LTVUnicycleController.h  LinearSystem.h  MakeCostMatrix.h  StateSpaceUtil.h
src/frc/controller/: LQR.h  LTVUnicycleController.cpp  LTVUnicycleController.h
src/frc/geometry/: Pose2d.h  Rotation2d.h  Transform2d.h  Translation2d.h  Twist2d.h
src/frc/kinematics/: ChassisSpeeds.h
src/frc/system/: Discretization.h
